# ANN

./: CMakeLists.txt
GeneticAlgorithm/: CMakeLists.txt
GeneticAlgorithm/include/avn/neuron/: genetic-algorithm.h
GeneticAlgorithm/src/: genetic-algorithm.cpp
Network/: CMakeLists.txt
Network/include/avn/neuron/: network.h
Network/src/: network.cpp
Neuron/: CMakeLists.txt
Neuron/include/avn/neuron/: gaussian.h  neuron_base.h  neuron_input.h  neuron_sum.h  sigmoid.h  threshold.h  variable.h
Neuron/src/: gaussian.cpp  neuron_base.cpp  neuron_sum.cpp  sigmoid.cpp  variable.cpp
Test/: CMakeLists.txt  main.cpp
Test/include/: tests.h
Test/src/: test_neuron.cpp
